<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AppDataActivity">

    <TextView
        android:id="@+id/DataTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data"
        android:textSize="100px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/distanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_marginTop="100px"
        android:layout_marginLeft="30px"
        app:layout_constraintTop_toBottomOf="@id/DataTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/distanceData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:layout_marginLeft="30px"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/DataTitle"
        app:layout_constraintLeft_toRightOf="@+id/distanceTitle"
        />
    <TextView
        android:id="@+id/movimentTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginLeft="30px"
        android:text="@string/timeMoving"
        app:layout_constraintTop_toBottomOf="@id/distanceTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/movimentTimeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="50px"
        android:text="0"
        app:layout_constraintLeft_toRightOf="@+id/movimentTimeTitle"
        app:layout_constraintTop_toBottomOf="@id/distanceTitle" />

    <TextView
        android:id="@+id/dowtimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginLeft="30px"
        android:text="@string/downtime"
        app:layout_constraintTop_toBottomOf="@id/movimentTimeTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/dowtimeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="50px"
        android:text="0"
        app:layout_constraintLeft_toRightOf="@+id/dowtimeTitle"
        app:layout_constraintTop_toBottomOf="@id/movimentTimeTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>